Added css file for style and js file for game function.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 <body>
     <h2>Tic Tac Toe</h2>
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <link rel="stylesheet" href="style.css">
 
+    <h3 class="current--player"></h3>
     <table>
         <tr>
             <td></td>
@@ -26,6 +27,12 @@
             <td></td>
         </tr>
     </table>
+
+    <section class="reset">
+        <button id="reset">Reset</button>
+    </section>
+
+    <script src="game.js"></script>
 
 </body>
 
