Changed board to div cells instead of table.

--- a/index.html
+++ b/index.html
@@ -10,23 +10,18 @@
     <link rel="stylesheet" href="style.css">
 
     <h3 class="current--player"></h3>
-    <table>
-        <tr>
-            <td></td>
-            <td class="vert"></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td class="hori"></td>
-            <td class="vert hori"></td>
-            <td class="hori"></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td class="vert"></td>
-            <td></td>
-        </tr>
-    </table>
+
+    <div class="game--board">
+        <div index="0" class="cell"></div>
+        <div index="1" class="cell"></div>
+        <div index="2" class="cell"></div>
+        <div index="3" class="cell"></div>
+        <div index="4" class="cell"></div>
+        <div index="5" class="cell"></div>
+        <div index="6" class="cell"></div>
+        <div index="7" class="cell"></div>
+        <div index="8" class="cell"></div>
+    </div>
 
     <section class="reset">
         <button id="reset">Reset</button>
