Fixed function checkWin so that the game is functional.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
         <div index="8" class="cell"></div>
     </div>
 
-    <section class="reset">
-        <button id="reset">Reset</button>
-    </section>
+    <button class="reset">Reset Game</button>
 
     <script src="game.js"></script>
 
