Finished final style changes and fixed error that game did not allow player to choose bottom right position.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h2>Tic Tac Toe</h2>
+    <h1>Tic Tac Toe</h1>
     <link rel="stylesheet" href="style.css">
 
     <h3 class="current--player"></h3>
@@ -23,7 +23,9 @@
         <div index="8" class="cell"></div>
     </div>
 
-    <button class="reset">Reset Game</button>
+    <div class="reset_game">
+        <button class="reset">Reset Game</button>
+    </div>
 
     <script src="game.js"></script>
 
